# robotics-with-micropython-jan2026

./: .gitignore  README.md  pyproject.toml  requirements.txt
step1_led_blink/: main.py
step2_motor_move/: main.py
step3_sensor_integration/: main.py
utils/: upload.py
